--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
     <div class="converted-numbers">
       <div class="converted-number-section converted-length">
         <div class="converted-title">Length (Meter/Feet)</div>
-        <div class="converted-number"></div>
+        <p class="converted-number"></p>
+
       </div>
       <div class="converted-number-section converted-volume">
         <div class="converted-title">Volume (Liters/Gallons)</div>
-        <div class="converted-number"></div>
+        <p class="converted-number"></p>
       </div>
       <div class="converted-number-section converted-mass">
         <div class="converted-title">Mass (Kilograms/Pounds)</div>
-        <div class="converted-number"></div>
+        <p class="converted-number"></p>
       </div>
     </div>
   </div>
