added js to display converted nums

--- a/index.html
+++ b/index.html
@@ -13,23 +13,25 @@
 
     <div class="display">
       <div class="display-title">Metric/Imperial Conversion</div>
-      <div class="display-input"></div>
-      <button class="display-btn btn">Convert</button>
+      <div class="flex">
+        <input type="input" class="display-input">
+        <button class="display-btn btn">Convert</button>
+      </div>
     </div>
 
     <div class="converted-numbers">
       <div class="converted-number-section converted-length">
         <div class="converted-title">Length (Meter/Feet)</div>
-        <p class="converted-number"></p>
+        <p class="converted-number meters-feets"></p>
 
       </div>
       <div class="converted-number-section converted-volume">
         <div class="converted-title">Volume (Liters/Gallons)</div>
-        <p class="converted-number"></p>
+        <p class="converted-number liters-gallons"></p>
       </div>
       <div class="converted-number-section converted-mass">
         <div class="converted-title">Mass (Kilograms/Pounds)</div>
-        <p class="converted-number"></p>
+        <p class="converted-number kilograms-pounds"></p>
       </div>
     </div>
   </div>
