added some error handling

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <input type="input" class="display-input">
         <button class="display-btn btn">Convert</button>
       </div>
+      <p class="warning"></p>
     </div>
 
     <div class="converted-numbers">
